@@ -1,3 +1,6 @@
+2017/02/24 v167
+	1. Fix a code error for raidpanel's aura refreshing.
+
 2017/01/12 v166
 	1. Update for the rogue's 10-max combo points.
 
